--- a/CS331_Project2024/CS331_Project2024/rollnumber1_rollnumber2_Part3.ipynb
+++ b/CS331_Project2024/CS331_Project2024/rollnumber1_rollnumber2_Part3.ipynb
@@ -23,13 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
-    "# make other necessary imports here"
+    "import torch.nn.functional as f\n",
+    "# make other necessary imports here\n",
+    "import numpy as np\n",
+    "\n"
    ]
   },
   {
@@ -48,11 +51,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# code here"
+    "# code here\n",
+    "def create_lookback_dataset(data, lookback):\n",
+    "   \n",
+    "    X, Y = [], []\n",
+    "    for i in range(len(data) - lookback):\n",
+    "        X.append(data[i:(i + lookback)].flatten())  # Flattening the window\n",
+    "        Y.append(data[i + lookback])\n",
+    "    return np.array(X), np.array(Y) \n",
+    "def process_data(file_name):\n",
+    "    with open(file_name, 'r') as file:\n",
+    "        lines = file.readlines()\n",
+    "    data = []\n",
+    "    for line in lines:          # process the lines to extract x and y coordinates\n",
+    "        x_str, y_str = line.strip().split(',')\n",
+    "        x = int(x_str)\n",
+    "        y = int(y_str)\n",
+    "        data.append([x, y])     # store x and y coordinates for each time step\n",
+    "    data = np.array(data)\n",
+    "    return data\n",
+    "train = process_data(r'Dataset/Training/training_data.txt')\n",
+    "test = process_data(r'Dataset/Testing/test01.txt')\n",
+    "look_back = [90,180,270]\n",
+    "x_train = []\n",
+    "y_train = []\n",
+    "x_test = []\n",
+    "y_test = []\n",
+    "\n",
+    "for i in look_back:\n",
+    "    X, Y = create_lookback_dataset(train, i)\n",
+    "    x_train.append(X)\n",
+    "    y_train.append(Y)\n",
+    "    X, Y = create_lookback_dataset(test, i)\n",
+    "    x_test.append(X)\n",
+    "    y_test.append(Y)\n"
    ]
   },
   {
@@ -64,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,9 +122,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Module.parameters() missing 1 required positional argument: 'self'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39moptim\u001b[38;5;241m.\u001b[39mAdam(\u001b[43mNeuralNet\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparameters\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m, lr\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.01\u001b[39m)   \u001b[38;5;66;03m# feel free to tune this hyperparameter\u001b[39;00m\n\u001b[0;32m      2\u001b[0m epochs \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100\u001b[39m    \u001b[38;5;66;03m# feel free to tune this hyperparameter\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# code here\u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: Module.parameters() missing 1 required positional argument: 'self'"
+     ]
+    }
+   ],
    "source": [
     "optimizer = torch.optim.Adam(NeuralNet.parameters(), lr=0.01)   # feel free to tune this hyperparameter\n",
     "epochs = 100    # feel free to tune this hyperparameter\n",
@@ -192,8 +240,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.5"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
